// Works with Gradle 5.7 and Java 12

// To run this do:
// ./gradlew run

// To build a distribution zip:
// ./gradlew distZip

plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.8'
    id 'org.beryx.jlink' version '2.22.3'
}

sourceCompatibility = 11
targetCompatibility = 11

version = '1.0'
group = 'commitToMaster'

java {
    modularity.inferModulePath.set(true)
}

application {
    mainModule = 'whatwebgui' // name defined in module-info.java
    mainClass = 'ehu.isad.Main'
}



// ext.moduleName = 'gradlejavafxhelloworld'
mainClassName = "$moduleName/ehu.isad.Main"


javafx {
    version = "12"
    modules = [ 'javafx.graphics', 'javafx.fxml', 'javafx.controls', 'javafx.base','javafx.web']
}

dependencies {
    implementation 'com.google.code.gson:gson:2.8.6'
    // https://mvnrepository.com/artifact/org.xerial/sqlite-jdbc
    //compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.32.3.2'
    implementation fileTree(dir: 'libs', include: ['*.jar'])
}

repositories {
    mavenCentral()
}
jlink {
    addExtraDependencies("javafx")
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'WhatWebGUI'
        jvmArgs = [
                "--add-opens", "javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons",'-Dlog4j.configurationFile=./log4j2.xml'
        ]
    }

    jpackage {
        if (org.gradle.internal.os.OperatingSystem.current().windows) {
            jpackageHome = "C:\\Users\\ANDER\\.sdkman\\candidates\\java\\15.0.1.fx-zulu";
            installerOptions += ['--win-per-user-install', '--win-dir-chooser', '--win-menu', '--win-shortcut']
            icon = "C:\\Users\\ANDER\\favicon.ico";
        } else if (org.gradle.internal.os.OperatingSystem.current().macOsX) {
            jpackageHome = "/Users/kerman/.sdkman/candidates/java/15.0.1.fx-zulu";
            installerOptions += ['--mac-package-identifier WhatWebGUI', '--mac-package-name WhatWebGUI']
            icon = "/iconsmall.png";
        } else if (org.gradle.internal.os.OperatingSystem.current().linux) {
            jpackageHome = "/home/adeiarias/.sdkman/candidates/java/15.0.1.fx-zulu";
            installerOptions += ['--linux-package-identifier WhatWebGUI', '--linux-deb-maintainer whatwebgui@gmail.com','--linux-shortcut']
            icon = "/iconsmall.png";
        }
    }
}

run {
    inputs.property('moduleName', moduleName)
    doFirst {
        if (System.getProperty("os.name").split(" ")[0] == "Mac"){
            def newArgs = [ '--add-exports','java.desktop/com.apple.eawt=ALL-UNNAMED',]
            jvmArgs = jvmArgs + newArgs
        }
        jvmArgs = jvmArgs + ['--add-opens', 'javafx.graphics/javafx.css=de.jensd.fx.fontawesomefx.commons',
                             '--module-path', classpath.asPath,
                             '--patch-module', "$moduleName=" + files(sourceSets.main.output.resourcesDir).asPath,
                             '--module', "$mainClassName",
        ]
        classpath = files()
    }
}